[project]
name = "mobilenet-unet"
version = "0.1.0"
description = "Lightweight MobileNetV2-based U-Net for real-time lane segmentation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "kagglehub>=0.3.13",
    "lark>=1.3.0",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "tensorflow[and-cuda]>=2.20.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
]
